# local_voice_ai_testing

./: README.md  main.py  pyproject.toml  setup.sh
src/: conversation_manager.py  server.py
src/asr/: emotion_recognition.py  nvidia_parakeet_asr.py  silero_realtime.py
src/llm/: llm_host.py
src/tts/: chatterbox_text_to_speech.py  kokoro_text_to_speech.py  sesame_text_to_speech.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothDDPOTrainer.py  UnslothGRPOTrainer.py  UnslothOnlineDPOTrainer.py
