[project]
name = "voicelatency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "silero-vad>=5.1.2",
    "pyaudio",
    "funasr",
    "huggingface_hub",
    "torchaudio",
    "sounddevice>=0.4.6",
    "sesame",
    "kokoro",
    "nemo_toolkit[asr]>=1.21.0",
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "transformers>=4.51.0",
    "accelerate",
    "bitsandbytes",
    "unsloth",
    "fastapi",
    "gradio>=4.28.0",
    "soundfile",
    "uvicorn[standard]"
]
